@@ -84,13 +84,13 @@ EOW
         "Dan Book <dbook\@cpan.org>"
       ],
       "dist_name" => "Minion-Backend-SQLite",
-      "dist_version" => "2.000",
+      "dist_version" => "2.001",
       "license" => "artistic_2",
       "module_name" => "Minion::Backend::SQLite",
       "recursive_test_files" => 1,
       "requires" => {
         "Minion" => "7.01",
-        "Mojo::SQLite" => "1.002",
+        "Mojo::SQLite" => "3.000",
         "Mojolicious" => "6.0",
         "Sys::Hostname" => 0,
         "Time::HiRes" => 0,
