@@ -48,6 +48,7 @@ implements the following new ones.
   my $backend = Minion::Backend::SQLite->new(':temp:');
   my $backend = Minion::Backend::SQLite->new('sqlite:test.db');
   my $backend = Minion::Backend::SQLite->new->tap(sub { $_->sqlite->from_filename('C:\\foo\\bar.db') });
+  my $backend = Minion::Backend::SQLite->new(Mojo::SQLite->new);
 
 Construct a new L<Minion::Backend::SQLite> object.
 
