@@ -1,7 +1,7 @@
 requires 'perl' => '5.010001';
 requires 'Minion' => '7.01';
 requires 'Mojolicious' => '6.0';
-requires 'Mojo::SQLite' => '1.002';
+requires 'Mojo::SQLite' => '3.000';
 requires 'Sys::Hostname';
 requires 'Time::HiRes';
 suggests 'Mojo::JSON::MaybeXS';
